refactor jobrepository